--- a/Wallet-UI/src/app/pages/login-page/login-page.component.html
+++ b/Wallet-UI/src/app/pages/login-page/login-page.component.html
@@ -1,31 +1,14 @@
-<!-- <mat-card class="login-card">
-    <mat-card-title>Login</mat-card-title>
-    <mat-card-content>
-      <mat-form-field>
-        <input matInput placeholder="Username" [(ngModel)]="username">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput type="password" placeholder="Password" [(ngModel)]="password">
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click)="login()">Login</button>
-      <asl-google-signin-button *ngIf="!user">Login with Google</asl-google-signin-button>
-      <button mat-raised-button class="google-login-btn" (click)="loginWithGoogle()">Login with Google</button>
-      <p>Don't have an account? <a routerLink="/create-account">Create one</a></p>
-    </mat-card-content>
-</mat-card> -->
-
-
 <mat-card>
     <mat-card-title style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Login to MultiWallet</mat-card-title>
     <mat-card-content style="text-align: center;" fxLayoutAlign="space-around center">
       <mat-form-field>
         <mat-label>Email</mat-label>
-        <input matInput type="email">
+        <input matInput type="email" [(ngModel)]="email">
       </mat-form-field>
       <br>
       <mat-form-field>
         <mat-label>Password</mat-label>
-        <input matInput type="password">
+        <input matInput type="password" [(ngModel)]="password">
       </mat-form-field>
       <br>
       <div style="padding-top: 20px;">
