--- a/Wallet-UI/src/app/pages/landing-page/landing-page.component.css
+++ b/Wallet-UI/src/app/pages/landing-page/landing-page.component.css
@@ -41,4 +41,38 @@ mat-card {
     margin-left: 15%;
     background-color: cornflowerblue;
 }
-  
+
+
+.buy-button-initial {
+    align-self: center;
+    font-family: sans-serif;
+    font-size: medium;
+    border: none;
+    padding: 15px 25px 15px 25px;
+    border-radius: 50px;
+    text-align: left;
+    /* margin-left: 15%; */
+    background-color: cornflowerblue;
+    color:slategray;
+    font-weight: bold;
+}
+
+.no-wallet-title {
+    font-family: sans-serif;
+    font-size: medium;
+    text-align: center;
+    color:slategray;
+    font-weight: bold;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.balance-title {
+    font-family: sans-serif;
+    font-size: medium;
+    text-align: left;
+    color:slategray;
+    font-weight: bold;
+    padding-left: 11%;
+    padding-top: 20px;
+}
