--- a/Wallet-UI/src/app/pages/landing-page/landing-page.component.html
+++ b/Wallet-UI/src/app/pages/landing-page/landing-page.component.html
@@ -10,13 +10,12 @@
 </div>
 
 <mat-card>
-    <mat-card-title *ngIf="isFirstTimeUser" style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Welcome to MultiWallet</mat-card-title>
-    <mat-card-title *ngIf="!isFirstTimeUser" style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Welcome back</mat-card-title>
+    <mat-card-title *ngIf="!isFirstTimeUser" style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Welcome to MultiWallet</mat-card-title>
+    <mat-card-title *ngIf="isFirstTimeUser" style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Welcome back</mat-card-title>
     <mat-card-content style="text-align: center;" fxLayoutAlign="space-around center">
-
     </mat-card-content>
-    <div fxLayout="row" fxLayoutAlign="start center"v style="padding-top: 10%;">
-        <mat-form-field style="width: 200px; text-align: left; padding-left: 20px; margin-right: 10px;">
+    <div  [ngStyle]="{'display': isFirstTimeUser ? 'block' : 'none'}" fxLayout="row" fxLayoutAlign="start center"v style="padding-top: 10%;">
+        <mat-form-field  style="width: 200px; text-align: left; padding-left: 20px; margin-right: 10px;">
           <mat-select [(value)]="selectedOption">
             <mat-option *ngFor="let option of dropdownOptions" [value]="option.value">
               {{ option.viewValue }}
@@ -24,8 +23,14 @@
           </mat-select>
         </mat-form-field>
 
+
         <button mat-raised-button (click)="openWalletDialog()" style="background-color: cornflowerblue" class="buy-button">Add wallet +</button>
+        <p class="balance-title">Total balance: 251 ETH</p>
+    
     </div>
+    
+    <button *ngIf="!isFirstTimeUser" mat-raised-button (click)="openWalletDialog()" style="background-color: cornflowerblue;color:#48494B;" class="buy-button-initial">Add wallet +</button>
+
 
     <table mat-table [dataSource]="dataSource" style="padding-left: 10%;padding-right:10%; padding-top: 10%">
 
@@ -37,14 +42,14 @@
 
         <!-- Description Column -->
         <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef>Description</th>
+            <th mat-header-cell *matHeaderCellDef>Hash</th>
             <td mat-cell *matCellDef="let transaction">{{ transaction.description }}</td>
         </ng-container>
       
         <!-- Amount Column -->
         <ng-container matColumnDef="amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let transaction">{{ transaction.amount }}</td>
+          <td mat-cell *matCellDef="let transaction">{{ transaction.amount }}ETH</td>
         </ng-container>
       
         
@@ -52,5 +57,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+
+      <p *ngIf="!isFirstTimeUser" class="no-wallet-title">No wallets created. Please create one :)</p>
       
 </mat-card>
