Draft send popup

--- a/Wallet-UI/src/app/components/send-popup/send-popup.component.html
+++ b/Wallet-UI/src/app/components/send-popup/send-popup.component.html
@@ -1,1 +1,25 @@
-<p>send-popup works!</p>
+<mat-card>
+    <mat-card-title style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Send coins</mat-card-title>
+    <mat-card-content style="text-align: center;" fxLayoutAlign="space-around center">
+        <mat-form-field>
+            <mat-label>Receiver</mat-label>
+            <input matInput type="text" [(ngModel)]="email">
+          </mat-form-field>
+          <br>
+          <mat-form-field>
+            <mat-label>Amount</mat-label>
+            <input matInput type="text" [(ngModel)]="amount">
+          </mat-form-field>
+          <br>
+          <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput type="password" [(ngModel)]="password">
+          </mat-form-field>
+          <br>
+          <div style="padding-top: 20px;">
+            <button (click)="send()" mat-raised-button style="width: 20%;margin-right: 30px;">Send</button>
+          </div>
+
+    </mat-card-content>
+</mat-card>
+
