--- a/Wallet-UI/src/app/components/wallet-popup/wallet-popup.component.html
+++ b/Wallet-UI/src/app/components/wallet-popup/wallet-popup.component.html
@@ -1,1 +1,27 @@
-<p>wallet-popup works!</p>
+<mat-card>
+    <mat-card-title style="text-align:center; font-size:x-large; padding-top: 30px; padding-bottom: 30px">Send coins</mat-card-title>
+    <mat-card-content style="text-align: center;" fxLayoutAlign="space-around center">
+        <mat-form-field>
+            <mat-label>Select Wallet Type</mat-label>
+            <mat-select [(ngModel)]="walletName">
+            <mat-option *ngFor="let option of options" [value]="option">{{ option }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+            <mat-label>Wallet Name</mat-label>
+            <input matInput type="text" [(ngModel)]="walletName">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput type="password" [(ngModel)]="password">
+        </mat-form-field>
+        <br>
+        <div style="padding-top: 20px;">
+            <button (click)="createWallet()" mat-raised-button style="width: 20%;margin-right: 30px;">Send</button>
+        </div>
+
+    </mat-card-content>
+</mat-card>
+
